# rust-bmark-test

./: Cargo.toml
benches/: simple_palindrome_benchmark.rs
src/: lib.rs  main.rs
