[package]
name = "bmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0.32", features = [ "cargo"] }
itertools = "0.10.5"
argfile = "0.1.5"
wild = "2"

[dev-dependencies]
pretty_assertions = "1"
criterion = "0.3"

[[bench]]
name = "simple_palindrome_benchmark"
harness = false
